--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,45 @@
+language: android
+jdk:
+  - oraclejdk8
+sudo: required
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+      - oracle-java8-set-default
+
 env:
-- TERM=dumb
+  global:
+    - ADB_INSTALL_TIMEOUT=20
+
+android:
+  components:
+    - platform-tools
+    - tools
+    - build-tools-25.0.2
+    - android-25
+    - android-21
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-support
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-21
+
+  licenses:
+     - 'android-sdk-license-.+'
+
 before_install:
-# Install base Android SDK
-- sudo apt-get update -qq
-- if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch > /dev/null; fi
-- wget http://dl.google.com/android/android-sdk_r22.3-linux.tgz
-- tar xzf android-sdk_r22.3-linux.tgz
-- export ANDROID_HOME=$PWD/android-sdk-linux
-- export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-# Install required components.
-# For a full list, run `android list sdk -a --extended`
-# Note that sysimg-19 downloads only ARM, because only the first license query is accepted.
-- echo yes | android update sdk --filter platform-tools --no-ui --force > /dev/null
-- echo yes | android update sdk --filter android-19 --no-ui --force > /dev/null
-- echo yes | android update sdk --filter extra-android-support --no-ui --force > /dev/null
-- echo yes | android update sdk --filter extra-android-m2repository --no-ui --force > /dev/null
-# Google play services
-- echo yes | android update sdk --filter extra-google-google_play_services --no-ui --force > /dev/null
-# Google Repository
-- echo yes | android update sdk --filter extra-google-m2repository --no-ui --force > /dev/null
-# Android SDK Build-tools
-- echo yes | android update sdk --all --filter build-tools-19.0.3 --no-ui --force > /dev/null
+  - chmod +x gradlew
+  - android list targets
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
+before_script:
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
 - ./gradlew build
